:lipstick: Change navbar styling
Navbar bottom colors changed, search bg changed

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
   border-radius: 0.8rem;
   width: 25%;
 
-  background-color: var(--white);
+  background-color: gray;
 }
 
 .nav__search input {
@@ -54,15 +54,20 @@ body {
   width: 100%;
 
   background-color: transparent;
+  color: var(--light);
 
-  font-size: 1.6rem;
+  font-size: 1.4rem;
+}
+
+.nav__search input::placeholder{
+  color: var(--light)
 }
 
 .nav_offer a {
-  border-bottom: 2px solid var(--ter3);
+  border-bottom: 2px solid var(--light);
   padding-bottom: 3px;
 
-  color: var(--ter3);
+  color: var(--white);
 
   font-size: 1.8rem;
   text-decoration: none;
@@ -72,21 +77,22 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 1rem 5rem;
-  border-bottom: 2px solid var(--black);
+  padding: 1rem 5rem 3rem 5rem;
 
-  background: var(--ter3);
+  background: var(--primary);
 }
 
 .nav__menu-item {
   margin-right: 3.5rem;
 
-  font-weight: 700;
-  font-size: 2rem;
+  font-weight: 500;
+  font-size: 1.8rem;
   text-transform: uppercase;
 
-  color: var(--secondary);
+  color: var(--white);
 
   list-style: none;
   cursor: pointer;
 }
+
+
