--- a/style.css
+++ b/style.css
@@ -105,11 +105,13 @@ body {
   padding-top: 3rem;
   background: url("https://images.unsplash.com/photo-1604147495798-57beb5d6af73?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2370&q=80");
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
+  overflow: hidden;
 }
 
 .slider__wrapper {
   width: 500vw;
   display: flex;
+  transition: 0.8s ease-in-out;
 }
 
 .slider__item {
