:lipstick: Feature section padding increased
Feature section Padding bottom increased.

--- a/style.css
+++ b/style.css
@@ -228,6 +228,7 @@ body {
   align-items: center;
   justify-content: space-evenly;
   padding: 9rem;
+  padding-bottom: 14rem;
 }
 
 .features__item {
