--- a/style.css
+++ b/style.css
@@ -91,6 +91,17 @@ body {
 
   background: var(--primary);
 }
+.nav__bottom-fixed {
+  padding-bottom: 1rem;
+}
+.fixed-top {
+  position: fixed;
+  width: 100%;
+  top: -50px;
+  z-index: 1;
+  transform: translateY(50px);
+  transition: 0.6s all;
+}
 
 .nav__menu-item {
   margin-right: 3.5rem;
