--- a/style.css
+++ b/style.css
@@ -397,3 +397,38 @@ body {
   margin: 2.5rem 0;
   font-size: 3.2rem;
 }
+
+/* choose your style section */
+.style {
+  display: flex;
+}
+
+.style__item {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: black;
+  color: white;
+}
+.style__title.sm {
+  font-size: 2rem;
+}
+
+.style__title {
+  margin: 2rem;
+  font-size: 3rem;
+}
+
+.style__item button {
+  margin-top: 2rem;
+  padding: 2rem 3rem;
+  font-weight: 700;
+
+  cursor: pointer;
+}
+
+.style__item img {
+  width: 100%;
+}
