--- a/style.css
+++ b/style.css
@@ -432,3 +432,64 @@ body {
 .style__item img {
   width: 100%;
 }
+
+/* footer */
+.footer {
+  display: flex;
+  padding: 5rem;
+  justify-content: space-between;
+}
+
+.footer h3 {
+  margin-bottom: 1.5rem;
+}
+
+.footer .footer__list {
+  list-style: none;
+}
+
+.footer__list li {
+  margin-bottom: 1rem;
+
+  color: var(--grey);
+
+  cursor: pointer;
+}
+
+.footer__last {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.footer__newsletter {
+  margin-bottom: 3rem;
+}
+
+.footer__subscribe-email input {
+  padding: 0.5rem;
+}
+
+.footer__subscribe-email button {
+  padding: 0.5rem 1rem;
+  border: 2px solid black;
+
+  color: var(--white);
+  background-color: var(--primary);
+
+  cursor: pointer;
+}
+
+.footer__followus {
+  margin-bottom: 2rem;
+}
+
+.footer__social-logos img {
+  width: 2rem;
+  height: 2rem;
+  margin-right: .8rem;
+}
+
+.footer__copyright {
+  color: var(--grey);
+}
